Ensure there's a content viewer in the in-process version of nsFrameLoader::PrintPreview.
Categories
(Toolkit :: Printing, defect)
Tracking
()
People
(Reporter: emilio, Assigned: emilio)
References
Details
Crash Data
Attachments
(2 files)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
264.05 KB,
image/gif
|
Details |
Assignee | ||
Comment 1•4 years ago
|
||
The code below assumes that, and bug 1666247 was hitting assertions
because of that, see D116877.
Comment 3•4 years ago
|
||
bugherder |
Comment 5•4 years ago
|
||
Emilio, could you request an uplift of this? This fixes the parent process crash when Ctrl-P is used at about:support
(bug 1720454 for STR).
Assignee | ||
Comment 6•4 years ago
|
||
Yes, I wanted to also request uplift of bug 1714639, but let's do this bug first, since it's harmless and it does fix the crash.
Assignee | ||
Comment 7•4 years ago
|
||
Comment on attachment 9228918 [details]
Bug 1718204 - Ensure that there's a content viewer in the docshell we're cloning a document into. r=jwatt
Beta/Release Uplift Approval Request
- User impact if declined: Printing parent process pages crashes.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: go to about:support, Ctrl+P
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Simple fix for an invariant that was relied upon by a native API.
- String changes made/needed: none
Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Comment on attachment 9228918 [details]
Bug 1718204 - Ensure that there's a content viewer in the docshell we're cloning a document into. r=jwatt
Crash fix, approved for 91 beta 5, thanks.
Comment 9•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Comment 10•4 years ago
|
||
I've reproduced this issue with Fx 91.0b2 on Windows 10.
With the latest beta Fx 91.0b6, intermittently the print modal displays a blank image until the destination option is changed (see the attached screencast).
Assignee | ||
Comment 11•4 years ago
|
||
Yeah, that's bug 1714639, which needs to be uplifted as well.
Comment 12•4 years ago
|
||
Verified fixed with Fx 92.0a1 (2021-07-26) and Fx 91.0b8 (treeherder build) on Windows 10, macOS 11.0, Ubuntu 18.04
Description
•