Bug 1718204 - Ensure that there's a content viewer in the docshell we're cloning a document into. r=jfkthame,layout-reviewers

The code below assumes that, and bug 1666247 was hitting assertions
because of that, see D116877.

Differential Revision: https://phabricator.services.mozilla.com/D118810